# agriproj

./: .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  USER_MANUAL.md  cliff.toml  poc.md  project_plan.md  pyproject.toml  run.py
.specify/memory/: constitution.md
.specify/scripts/bash/: speckit.sh
.specify/templates/: plan.md  spec.md  tasks.md
agridoc/: __init__.py  app.py
agridoc/models/: database.py
agridoc/routes/: api.py  documents.py  farmers.py  main.py
agridoc/static/: manifest.json
agridoc/static/css/: agridoc.css
agridoc/static/js/: app.js  sw.js
agridoc/templates/: about.html  index.html
agridoc/templates/documents/: list.html  upload.html  view.html
agridoc/templates/farmers/: form.html  list.html  view.html
agridoc/utils/: ocr_engine.py  translations.py
specs/001-document-digitizer/: data-model.md  plan.md  research.md  spec.md  tasks.md
templates/: base.html
tests/: __init__.py  test_agridoc.py
